# yinc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: lib.rs  main.rs
src/error/: mod.rs
src/http/: client.rs
src/include/: directive.rs  mod.rs  processor.rs  resolver.rs
src/parser/: mod.rs  yaml.rs
src/shell/: executor.rs  mod.rs
tests/: integration_tests.rs
tests/fixtures/: child1.yml  child2.yml  data.json  json_test.yml  parent.yml
