[package]
name = "yinc"
version = "0.3.1"
edition = "2021"
description = "YAML include processor - Rust implementation"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/yinc.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
glob = "0.3"
anyhow = "1.0"
regex = "1.10"
