[package]
name = "yinc"
version = "0.3.1"
edition = "2021"
description = "YAML include processor - Rust implementation"
authors = ["togashi <togashix@gmail.com>"]
license = "MIT"
repository = "https://github.com/togashi/yinc-rs"
homepage = "https://github.com/togashi/yinc-rs"
documentation = "https://docs.rs/yinc"
readme = "README.md"
keywords = ["yaml", "include", "configuration", "cli", "processor"]
categories = ["command-line-utilities", "config", "parsing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
